--- a/index.html
+++ b/index.html
@@ -1,181 +1,102 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Shopping Cart</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-    />
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
-      rel="stylesheet"
-    />
-    <link href="style.css" rel="stylesheet" />
-  </head>
 
-  <body>
-    <section>
-      <div class="container">
-        <div class="cart">
-          <div class="col-md-12 col-lg-10 mx-auto">
-            <div class="cart-item">
-              <div class="row">
-                <div class="col-md-7 center-item">
-                  <img src="images/product-1.png" alt="" />
-                  <h5>iPhone 11 128GB Black</h5>
-                </div>
+<head>
+  <title>Shopping Cart</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet" />
+  <link href="style.css" rel="stylesheet" />
+</head>
 
-                <div class="col-md-5 center-item">
-                  <div class="input-group number-spinner">
-                    <button id="minusBtn1" class="btn btn-default">
-                      <i class="fas fa-minus"></i>
-                    </button>
-                    <input
-                      id="mobileQuantity"
-                      type="text"
-                      class="form-control text-center"
-                      value="1"
-                    />
-                    <!-- Working here -->
-                    <button id="plusBtn1" class="btn btn-default">
-                      <i class="fas fa-plus"></i>
-                    </button>
-                  </div>
-                  <h5>$ <span id="mobile-price">1219</span></h5>
-                  <img src="images/remove.png" alt="" class="remove-item" />
+<body>
+  <section>
+    <div class="container">
+      <div class="cart">
+        <div class="col-md-12 col-lg-10 mx-auto">
+          <div class="cart-item">
+            <div class="row">
+              <div class="col-md-7 center-item">
+                <img src="images/product-1.png" alt="" />
+                <h5>iPhone 11 128GB Black</h5>
+              </div>
+
+              <div class="col-md-5 center-item">
+                <div class="input-group number-spinner">
+                  <button id="minusBtnPhone" class="btn btn-default">
+                    <i class="fas fa-minus"></i>
+                  </button>
+                  <input id="mobileQuantity" type="text" class="form-control text-center" value="1" />
+                  <!-- Working here -->
+                  <button id="plusBtnPhone" class="btn btn-default">
+                    <i  class="fas fa-plus"></i>
+                  </button>
                 </div>
+                <h5>$ <span id="mobile-price">1219</span></h5>
+                <img src="images/remove.png" alt="" class="remove-item" />
               </div>
             </div>
+          </div>
 
-            <div class="cart-item">
-              <div class="row">
-                <div class="col-md-7 center-item mx-auto">
-                  <img src="images/product-2.png" alt="" />
-                  <h5>iPhone 11 Silicone Case - Black</h5>
+          <div class="cart-item">
+            <div class="row">
+              <div class="col-md-7 center-item mx-auto">
+                <img src="images/product-2.png" alt="" />
+                <h5>iPhone 11 Silicone Case - Black</h5>
+              </div>
+              <div class="col-md-5 center-item">
+                <div class="input-group number-spinner">
+
+                  <button id="minusBtnCase" class="btn btn-default">
+                    <i class="fas fa-minus"></i>
+                  </button>
+
+                  <input id="caseQuantity" type="text" class="form-control text-center" value="1" />
+                
+                  <button id="plusBtnCase" class="btn btn-default">
+                    <i  class="fas fa-plus"></i>
+                  </button>
                 </div>
-                <div class="col-md-5 center-item">
-                  <div class="input-group number-spinner">
-                    <button id="minusBtn2" class="btn btn-default">
-                      <i class="fas fa-minus"></i>
-                    </button>
-                    <input
-                      id="caseQuantity"
-                      type="text"
-                      class="form-control text-center"
-                      value="1"
-                    />
-                    <button id="plusBtn2" class="btn btn-default">
-                      <i class="fas fa-plus"></i>
-                    </button>
-                  </div>
-                  <h5>$ <span id="case-price">59</span></h5>
-                  <img src="images/remove.png" alt="" class="remove-item" />
-                </div>
+                <h5>$ <span id="case-price">59</span></h5>
+                <img src="images/remove.png" alt="" class="remove-item" />
               </div>
             </div>
+          </div>
 
-            <div class="cart-item">
-              <div class="row">
-                <div class="col-md-8">
-                  <h5>Subtotal:</h5>
-                  <h5>Tax:(0.7% of all products)</h5>
-                  <h5>Total:</h5>
-                </div>
+          <div class="cart-item">
+            <div class="row">
+              <div class="col-md-8">
+                <h5>Subtotal:</h5>
+                <h5>Tax:(0.7% of all products)</h5>
+                <h5>Total:</h5>
+              </div>
 
-                <div class="col-md-4 status">
-                  <h5>$ <span id="subTotal">1,278 </span></h5>
-                  <h5>$ <span id="tax">0</span></h5>
-                  <h5>$ <span id="total_balance">1,278</span></h5>
-                </div>
+              <div class="col-md-4 status">
+                <h5>$ <span id="subTotal">1,278 </span></h5>
+                <h5>$ <span id="tax">0</span></h5>
+                <h5>$ <span id="total_balance">1,278</span></h5>
               </div>
             </div>
-            <div class="col-md-12 pt-4 pb-4">
-              <button type="button" class="btn btn-success check-out">
-                Check Out
-              </button>
-            </div>
+          </div>
+          <div class="col-md-12 pt-4 pb-4">
+            <button type="button" class="btn btn-success check-out">
+              Check Out
+            </button>
           </div>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <script>
-      const mobile = 1219;
-      const casing = 59;
-      //Mobile Plus Button
-      document
-        .getElementById("plusBtn1")
-        .addEventListener("click", function () {
-          plsBtn("mobileQuantity", "mobile-price", mobile);
-          cart();
-        });
+  <!-- <script>
+    
+    </script> -->
 
-      //Casing Plus Button
-      document
-        .getElementById("plusBtn2")
-        .addEventListener("click", function () {
-          plsBtn("caseQuantity", "case-price", casing);
-          cart();
-        });
-      //Plus Function
-      function plsBtn(inputId, priceId, product) {
-        const plusInput = document.getElementById(inputId).value;
-        const plusInputNum = parseFloat(plusInput);
-        document.getElementById(inputId).value = plusInputNum + 1;
-        const mobilePrice = document.getElementById(priceId).innerText;
-        const mobilePriceNum = parseFloat(mobilePrice);
-        const totalMobilePrice = mobilePriceNum + product;
-        document.getElementById(priceId).innerText = totalMobilePrice;
-      }
-      //Mobile Minus Button
+  <script src="common.js"></script>
+  <script src="case.js"></script>
+  <script src="phone.js"></script>
 
-      document
-        .getElementById("minusBtn1")
-        .addEventListener("click", function () {
-          minusBtn("mobileQuantity", "mobile-price", mobile);
-          cart();
-        });
+</body>
 
-      //Casing Minus Button
-      document
-        .getElementById("minusBtn2")
-        .addEventListener("click", function () {
-          minusBtn("caseQuantity", "case-price", casing);
-          cart();
-        });
-
-      //Minus Button Function
-      function minusBtn(inputId, priceId, product) {
-        const minusInput = document.getElementById(inputId).value;
-        const minusInputNum = parseFloat(minusInput);
-        if (minusInputNum > 1) {
-          document.getElementById(inputId).value = minusInputNum - 1;
-
-          const mobilePrice = document.getElementById(priceId).innerText;
-          const mobilePriceNum = parseFloat(mobilePrice);
-          const totalMobilePrice = mobilePriceNum - product;
-          document.getElementById(priceId).innerText = totalMobilePrice;
-        }
-      }
-
-      //Cart Option
-      function cart() {
-        const subTotalAmount =
-          parseFloat(document.getElementById("mobile-price").innerText) +
-          parseFloat(document.getElementById("case-price").innerText);
-        document.getElementById("subTotal").innerText = subTotalAmount;
-        document.getElementById("tax").innerText = (
-          (0.7 / 100) *
-          subTotalAmount
-        ).toFixed(2);
-
-        const inTotal =
-          parseFloat(document.getElementById("tax").innerText) +
-          parseFloat(document.getElementById("subTotal").innerText);
-        document.getElementById("total_balance").innerText = inTotal;
-      }
-    </script>
-  </body>
 </html>
